# wsih

./: CNAME  README.md  episodes.json  index.html  main.py  pyproject.toml  series.json
.github/workflows/: fetch-podcasts.yml
oh-my-pod/: index.html  main.py  podcasts.json  pyproject.toml
